# QY-14

./: CMakeLists.txt  Device.cpp  Device.h  README.md  Vehicle.vcxproj  Vehicle.vcxproj.filters  main.cpp
Arduino library/: Arduino LiquidCrystal.h(LCD) library.md  Arduino MsTimer2 Library.md  Arduino SoftwareSerial Library.md  Arduino wire.h(IIC) library.md
Arduino library/Arduino Basic/: Arduino Data types.md  Arduino Hardware Serial(UART & USART) Function.md  Arduino Serial Function.md  attachInterrupt().md
Code/: TemplateMatch.cpp  TemplateMatch.h  Visual.cpp  Visual.h
Project 3/code/Biconnect_A/: Biconnect_A.ino  Biconnect_A.sln  Biconnect_A.vcxproj  Biconnect_A.vcxproj.filters
Project 4/Line_Following_I2C_2/: Line_Following_I2C_2.ino  Line_Following_I2C_2.sln  Line_Following_I2C_2.vcxproj  Line_Following_I2C_2.vcxproj.filters
Project 4/Line_Following_I2C_4/: Line_Following_I2C_4.ino  Line_Following_I2C_4.sln  Line_Following_I2C_4.vcxproj  Line_Following_I2C_4.vcxproj.filters
Project 4/Line_following_1/: Line_following_1.ino  Line_following_1.sln  Line_following_1.vcxproj  Line_following_1.vcxproj.filters
Project 4/Line_following_I2C_1/: Line_following_I2C_1.ino  Line_following_I2C_1.sln  Line_following_I2C_1.vcxproj  Line_following_I2C_1.vcxproj.filters
Project 4/indivial/: indivial.ino
project 2/Car_final_code2.0/: Car_final_code.ino
project 2/Car_final_code_origin_baseboard/: Car_final_code_origin_baseboard.ino
project 2/Sine/: Draft1.asc  Draft1.op.raw
project 2/final/: final.ino
project 2/final_tmp/: final_tmp.ino
(+81 files in other folders)
